# speaches

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yaml  compose.cuda.yaml  compose.observability.yaml  contributing.md  flake.nix  pyproject.toml  pyrefly.toml  pyrightconfig.json  ruff.toml  sitemap.xml
.github/: actionlint.yaml
.github/workflows/: docker-build-and-push.yaml  lint.yaml  publish-docs.yaml  test.yaml
docs/: index.md  installation.md
docs/usage/: realtime-api.md  speech-embedding.md
misc/onnx-export/: pyannote_embedding.py  pyannote_embedding_test.py  pyproject.toml
misc/onnx-export/models/: README.md
scripts/: performance_benchmark.py  realtime_transcription_client.py  tts_performance_test.py
src/speaches/: __init__.py  api_types.py  audio.py  config.py  dependencies.py  diarization.py  hf_utils.py  main.py  model_registry.py  text_utils.py  tracing.py  utils.py
src/speaches/executors/: base_model_manager.py  kokoro.py  parakeet.py  piper.py  pyannote.py  pyannote_diarization.py  pyannote_speaker_embedding.py  pyannote_speaker_segmentation.py  registry.py  silero_vad_v5.py  wespeaker_speaker_embedding.py  whisper.py
src/speaches/realtime/: chat_utils.py  context.py  conversation_event_router.py  event_router.py  input_audio_buffer.py  input_audio_buffer_event_router.py  message_manager.py  pubsub.py  response_event_router.py  session.py  session_event_router.py  utils.py
src/speaches/routers/: chat.py  diarization.py  misc.py  models.py  realtime_rtc.py  realtime_ws.py  speech.py  speech_embedding.py  stt.py  utils.py  vad.py
src/speaches/types/: realtime.py  (+1 more)
tests/: api_chat_test.py  audio_test.py  conftest.py  diarization_test.py  model_manager_test.py  openai_transcription_test.py  realtime_api_test.py  speech_embedding_test.py  speech_test.py  sse_test.py
tests/realtime/: conftest.py  realtime_conversation_test.py  utils.py
(+20 files in other folders)
